<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button1"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        
        android:background="@color/blue"
        android:text="@string/string1"
        android:textColor="@color/white" 
        android:onClick="cTA" />

    <Button
        android:id="@+id/button2"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button1"
        
        android:background="@color/blue"
        android:text="@string/string2"
        android:textColor="@color/white" 
        android:onClick="cRA" />

    <Button
        android:id="@+id/button3"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_below="@+id/button2"
        
        android:background="@color/blue"
        android:text="@string/string3"
        android:textColor="@color/white" 
        android:onClick="cSA" />

    <Button
        android:id="@+id/button4"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button3"
        android:layout_below="@+id/button3"
        
        android:background="@color/blue"
        android:text="@string/string4"
        android:textColor="@color/white" 
        android:onClick="cPA" />

    <Button
        android:id="@+id/button5"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button4"
        android:layout_below="@+id/button4"
        
        android:background="@color/blue"
        android:text="@string/string5"
        android:textColor="@color/white" 
        android:onClick="cTrapezoidA" />

    <Button
        android:id="@+id/button6"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button5"
        android:layout_below="@+id/button5"
        
        android:background="@color/blue"
        android:text="@string/string6"
        android:textColor="@color/white" 
        android:onClick="cEA" />

    <Button
        android:id="@+id/button7"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button6"
        android:layout_below="@+id/button6"
        
        android:background="@color/blue"
        android:text="@string/string7"
        android:textColor="@color/white" 
        android:onClick="cCA" />

    <Button
        android:id="@+id/button8"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button7"
        android:layout_below="@+id/button7"
        
        android:background="@color/blue"
        android:text="@string/string8"
        android:textColor="@color/white" 
        android:onClick="cSectorA" />

</RelativeLayout>
